--- a/src/components/About/_style.scss
+++ b/src/components/About/_style.scss
@@ -1,3 +1,5 @@
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
 .about {
   display: flex;
   justify-content: center;
@@ -35,7 +37,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding:  1px 0 0 0;
+    padding: 1px 0 0 0;
     margin: -1px auto 0 auto;
     & > a {
       display: flex;
@@ -46,17 +48,17 @@
       background-color: $primary;
       color: $white;
       border-radius: 50%;
-      padding: .5em;
-      margin-right: .8em;
+      padding: 0.5em;
+      margin-right: 0.8em;
       text-transform: uppercase;
       cursor: pointer;
       &:hover {
         color: $dark;
-        opacity: .9;
+        opacity: 0.9;
       }
     }
   }
-/*   &__social {
+  /*   &__social {
     padding: 0;
     align-self: center;
     list-style-type: none;
@@ -131,11 +133,10 @@
   } 
 }*/
 
-
 @include for-phone {
-    .about {
-      flex-direction: column;
-      @include font-size-s;
+  .about {
+    flex-direction: column;
+    @include font-size-s;
     &__article {
       width: 90%;
       &__title {
@@ -166,7 +167,7 @@
         }
       }
       &__text {
-        @include font-size-l-x
+        @include font-size-l-x;
       }
     }
     &__links {
