--- a/src/components/BlogBody/_style.scss
+++ b/src/components/BlogBody/_style.scss
@@ -1,3 +1,4 @@
+@import '../../styles/abstracts/variables';
 .blog {
   display: flex;
   justify-content: center;
@@ -15,7 +16,7 @@
       display: flex;
     }
     &__link {
-      margin: 0  0 0 8px;
+      margin: 0 0 0 8px;
       color: $main-bg-color;
     }
   }
@@ -26,7 +27,10 @@
 }
 
 @media (max-width: 768px) {
-  .blog__posts {
+  .blog {
     width: 100%;
+    &__posts {
+      width: 100%;
+    }
   }
 }
