--- a/src/components/CardPost/_style.scss
+++ b/src/components/CardPost/_style.scss
@@ -1,3 +1,4 @@
+@import '../../styles/abstracts/variables';
 .card__post {
   &:not(:last-of-type) {
     border-bottom: 1px solid purple;
@@ -89,14 +90,14 @@
           width: 6px;
           left: 10px;
           top: 10px;
-          content: "";
+          content: '';
           background: #fff;
           border-radius: 10px;
           box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
         }
         &:after {
           position: absolute;
-          content: "";
+          content: '';
           right: 0;
           top: 0;
           background: #fff;
