--- a/src/components/Dashboard/Gallery/_style.scss
+++ b/src/components/Dashboard/Gallery/_style.scss
@@ -4,6 +4,7 @@
     background: white;
     padding: 150px 20px;
     height: 100%;
+    width: 100%;
     &__contents {
         display: flex;
         flex-wrap: wrap;
