--- a/src/components/Dashboard/Nav/_style.scss
+++ b/src/components/Dashboard/Nav/_style.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/abstracts/variables';
 .nav {
   position: fixed;
   left: 0;
@@ -5,14 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: .1em 0;
+  padding: 0.1em 0;
   background-color: $black;
   z-index: 44;
   &__icon {
     position: relative;
-    margin-right: .5em;
+    margin-right: 0.5em;
     margin-left: auto;
-    margin-top: .5em;
+    margin-top: 0.5em;
     display: inline-block;
     cursor: pointer;
 
@@ -43,7 +44,7 @@
         width: 1px;
         height: 35px;
         transform: translateY(-50%);
-        content: "";
+        content: '';
       }
     }
     &__logout {
