--- a/src/components/Dashboard/Toolbar/_style.scss
+++ b/src/components/Dashboard/Toolbar/_style.scss
@@ -1,56 +1,58 @@
-.toolbar {
-    position: fixed;
-    left: 0;
-    right: 0;
-    background-color: #ffffff;
-    z-index: 33;
-    display: flex;
-    padding: 12px;
-    margin-bottom: 8px;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
+@import '../../../styles//abstracts/variables';
 
-    &__buttons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: auto;
-    }
-    
-    &__toggle {
-        border: 1px solid $dark-light;
-        border-radius: 4px;
-        padding: 4px;
-        cursor: pointer;
-        display: none;
-    }
+.toolbar {
+  position: fixed;
+  left: 0;
+  right: 0;
+  background-color: #ffffff;
+  z-index: 33;
+  display: flex;
+  padding: 12px;
+  margin-bottom: 8px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2);
+
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  &__toggle {
+    border: 1px solid $dark-light;
+    border-radius: 4px;
+    padding: 4px;
+    cursor: pointer;
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
-    .toolbar {
-        &__buttons {
-            position: absolute;
-            right: 20px;
-            top: 35px;
-            height: 90px;
-            width: 80px;
-            background: #333;
-            border-radius: 4px;
-            flex-direction: column;
-            justify-content: center;
-            &-hide {
-                display: none;
-            }
-        }
-        &__toggle {
-            margin-left: auto;
-            background: transparent;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .button {
-            color: white;
-            background: transparent;
-        }
+  .toolbar {
+    &__buttons {
+      position: absolute;
+      right: 20px;
+      top: 35px;
+      height: 90px;
+      width: 80px;
+      background: #333;
+      border-radius: 4px;
+      flex-direction: column;
+      justify-content: center;
+      &-hide {
+        display: none;
+      }
     }
+    &__toggle {
+      margin-left: auto;
+      background: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .button {
+      color: white;
+      background: transparent;
+    }
+  }
 }
