--- a/src/components/Dashboard/_main.scss
+++ b/src/components/Dashboard/_main.scss
@@ -1,3 +1,4 @@
+@import '../../styles/abstracts/variables';
 @import './Editor/style';
 @import './Gallery/style';
 @import './Nav/style';
@@ -5,11 +6,12 @@
 @import './PostTable/style';
 @import './Toolbar/style';
 @import './PctureChoice/style';
+@import './CommentList/style';
 
 .dashboard {
-    display: flex;
-    //flex-direction: column;
-    background-color: $lighter;
-    width: 100%;
-    height: 100vh;
+  display: flex;
+  //flex-direction: column;
+  background-color: $lighter;
+  width: 100%;
+  height: 100vh;
 }
