--- a/src/components/Header/_style.scss
+++ b/src/components/Header/_style.scss
@@ -1,3 +1,5 @@
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
 .header {
   position: relative;
   display: flex;
@@ -28,7 +30,7 @@
       text-transform: uppercase;
       letter-spacing: 0.07em;
       cursor: pointer;
-      @include font-size-s
+      @include font-size-s;
     }
   }
   &__title {
