--- a/src/components/Login/_style.scss
+++ b/src/components/Login/_style.scss
@@ -1,35 +1,37 @@
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
 .login {
-    background: $primary;
-    height: 100vh;
-    color: white;
+  background: $primary;
+  height: 100vh;
+  color: white;
 
-    h1 {
-        margin: 0;
-        padding: 2em;
-        text-align: center;
+  h1 {
+    margin: 0;
+    padding: 2em;
+    text-align: center;
+  }
+
+  form {
+    margin: 0 auto;
+    width: 45%;
+
+    button {
+      text-transform: uppercase;
+      color: $white;
+      font-size: 0.9em;
+      font-weight: bold;
+      &:hover {
+        color: $primary;
+      }
     }
-
-    form {
-        margin: 0 auto;
-        width: 45%;
-
-        button {
-            text-transform: uppercase;
-            color: $white;
-            font-size: .9em;
-            font-weight: bold;
-            &:hover {
-                color: $primary;
-            }
-        }
-    }
+  }
 }
 
 @media (max-width: 768px) {
-    .login {
-        flex-direction: column;
-        form {
-            width: 80%;
-        }
+  .login {
+    flex-direction: column;
+    form {
+      width: 80%;
     }
+  }
 }
