--- a/src/components/Modal/_style.scss
+++ b/src/components/Modal/_style.scss
@@ -1,36 +1,39 @@
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  &-isOpen {
+    display: block;
+  }
+  &__content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 1.5em 2em;
+    border-radius: 0.25em;
     height: 100%;
-    overflow: hidden;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0, 0, 0, 0.4);
-    &-isOpen {
-        display: block;
+    width: 90%;
+    overflow-y: scroll;
+  }
+  &__close {
+    color: $dark;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+
+    &:hover,
+    &:focus {
+      color: $black;
+      text-decoration: none;
+      cursor: pointer;
     }
-    &__content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 1.5em 2em;
-        border-radius: .25em;
-        height: 100%;
-        width: 90%;
-        overflow-y: scroll;
-    }
-    &__close {
-        color: $dark;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-        
-        &:hover, &:focus {
-            color: $black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-    }
+  }
 }
