--- a/src/components/Navbar/_style.scss
+++ b/src/components/Navbar/_style.scss
@@ -1,4 +1,5 @@
-
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
 
 /* nav {
   display: flex;
@@ -30,10 +31,6 @@
   }
 } */
 
-.nav__wrapper {
-  height: 50px;
-}
-
 .navbar {
   position: fixed;
   top: 0;
@@ -43,18 +40,15 @@
   justify-content: center;
   z-index: 44;
   @include for-phone {
-
   }
   &__items {
     display: flex;
     align-items: center;
     width: 100%;
     height: 50px;
-    padding: 2em 0;
     background: $black;
     color: $white;
     z-index: 33;
-    padding: 0;
     &__list {
       list-style: none;
       display: flex;
@@ -98,7 +92,7 @@
   }
   &__social {
     margin-left: auto;
-    margin-right: 1em;
+    padding-right: $spacing-00-75;
     &__link {
       display: flex;
       justify-content: center;
@@ -113,6 +107,21 @@
       &:hover {
         background-color: $primary;
         border-color: $primary;
+      }
+    }
+  }
+}
+
+@include for-phone {
+  .navbar {
+    @include font-size-s;
+    &__items {
+      padding: 0;
+
+      &__list {
+        a {
+          padding: 0 $spacing-00-50;
+        }
       }
     }
   }
