--- a/src/components/Dashboard/Gallery/_style.scss
+++ b/src/components/Dashboard/Gallery/_style.scss
@@ -1,18 +1,17 @@
 .gallery {
+  display: flex;
+  flex-direction: column;
+  background: #ffffff;
+  height: 100%;
+  width: 100%;
+  &__contents {
     display: flex;
-    flex-direction: column;
-    background: white;
-    padding: 150px 20px;
-    height: 100%;
-    width: 100%;
-    &__contents {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 20px;
-    }
-    &__empty {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    flex-wrap: wrap;
+    margin-top: 20px;
+  }
+  &__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
