--- a/src/components/Modal/_style.scss
+++ b/src/components/Modal/_style.scss
@@ -1,39 +1,30 @@
 @import '../../styles/abstracts/variables';
 @import '../../styles/abstracts/mixins';
 .modal {
-  display: none;
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
   height: 100%;
-  overflow: hidden;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-  &-isOpen {
-    display: block;
-  }
-  &__content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 1.5em 2em;
-    border-radius: 0.25em;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: fadeIn 1s;
+  &__overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
     height: 100%;
-    width: 90%;
-    overflow-y: scroll;
+    width: 100%;
+    top: 0;
+    left: 0;
   }
-  &__close {
-    color: $dark;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-
-    &:hover,
-    &:focus {
-      color: $black;
-      text-decoration: none;
-      cursor: pointer;
-    }
+  &__body {
+    background-color: #ffffff;
+    border-radius: 7px;
+    max-height: calc(100% - 60px);
+    max-width: 768px;
+    position: relative;
+    z-index: 22;
+    padding: 1em;
   }
 }
