--- a/src/components/Dashboard/_main.scss
+++ b/src/components/Dashboard/_main.scss
@@ -1,5 +1,5 @@
 @import '../../styles/abstracts/variables';
-@import './Editor/style';
+@import './RichEditor/style';
 @import './Gallery/style';
 @import './Nav/style';
 @import './Profile/style';
