--- a/src/components/Footer/_style.scss
+++ b/src/components/Footer/_style.scss
@@ -1,82 +1,22 @@
-@import '../../styles/abstracts/variables';
 .footer {
   display: flex;
-  align-self: flex-end;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: $black;
-  padding: 1em;
-  &__section {
-    &:nth-child(2) {
-      margin: 0 auto;
-    }
-    &__link {
-      a {
-        padding: 0.5em;
-        color: white;
-        font-weight: bold;
-        font-size: 0.9em;
+  background: #eee;
+
+  &__social {
+    height: 60px;
+    width: 60px;
+    a {
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
         &:hover {
-          color: #000046;
+          background: #eee;
         }
       }
-    }
-    &__list {
-      display: flex;
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-    &__items {
-      padding: 0 0.5em;
-    }
-  }
-  &__subtitle {
-    width: 100%;
-    font-size: 0.7rem;
-    text-transform: capitalize;
-    color: white;
-    word-spacing: 0.1em;
-    padding: 0 4em;
-    &__link {
-      margin-left: 4px;
-      text-decoration: none;
-      color: $light-french;
-    }
-  }
-  &__subscribe {
-    padding: 1em;
-    cursor: pointer;
-    padding: 0.6em 0.8em;
-    border: 1px solid $white;
-    border-radius: 0.25em;
-    color: $white;
-    text-transform: uppercase;
-    &:hover {
-      color: $primary;
-      border-color: $primary;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .footer {
-    &__section {
-      &__list {
-        margin: 0;
-        padding: 0;
-      }
-      &__link {
-        padding-left: 0;
-      }
-    }
-    &__subtitle {
-      padding: 0;
-      word-spacing: 0;
     }
   }
 }
