--- a/src/components/Navbar/_style.scss
+++ b/src/components/Navbar/_style.scss
@@ -1,41 +1,15 @@
 @import '../../styles/abstracts/variables';
 @import '../../styles/abstracts/mixins';
 
-/* nav {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 50px;
-  padding: 2em 0;
-  background: $black;
-  color: $white;
-  z-index: 33;
-
-  ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-
-    a {
-      text-decoration: none;
-      text-transform: capitalize;
-      //color: white;
-      padding: 8px 16px;
-      font-size: 1rem;
-      cursor: pointer;
-
-      &:hover {
-        color: $primary;
-      }
-    }
-  }
-} */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap');
 
 .navbar {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  padding: 0.7em 0;
+  background: none;
   display: flex;
   justify-content: center;
   z-index: 44;
@@ -46,8 +20,7 @@
     align-items: center;
     width: 100%;
     height: 50px;
-    background: $black;
-    color: $white;
+
     z-index: 33;
     &__list {
       list-style: none;
@@ -57,7 +30,10 @@
       a {
         text-decoration: none;
         text-transform: capitalize;
-        color: $white;
+        font-size: 1.2em;
+        font-weight: 600;
+        font-family: 'Fira Sans', sans-serif;
+        color: $black;
         padding: 8px 16px;
         cursor: pointer;
         &:hover {
@@ -90,26 +66,11 @@
       transform: rotate(45deg) translate(-8px, -8px);
     }
   }
-  &__social {
-    margin-left: auto;
-    padding-right: $spacing-00-75;
-    &__link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    &__icon {
-      border: 1px solid $white;
-      border-radius: 50%;
-      background-color: $white;
-      height: 30px;
-      width: 30px;
-      &:hover {
-        background-color: $primary;
-        border-color: $primary;
-      }
-    }
-  }
+}
+.sticky {
+  background-color: #fff;
+  opacity: 1;
+  top: 0px;
 }
 
 @include for-phone {
