--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,19 +1,14 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
 
 $font-family: 'Open Sans', sans-serif;
 
-
-
-
-$primary: #1292B4;
-$white: #FFF;
-$lighter: #F3F3F3;
-$light: #DAE1E7;
-
+$primary: #1292b4;
+$white: #fff;
+$lighter: #f3f3f3;
+$light: #dae1e7;
 
 $main-bg-color: red;
 $main-dark-color: red;
-
 
 /* colors */
 //$primary: #dd7f45;
