--- a/src/components/Dashboard/Gallery/_style.scss
+++ b/src/components/Dashboard/Gallery/_style.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background: #ffffff;
+  padding: 8em 2em 4em 2em;
   height: 100%;
   width: 100%;
   &__contents {
