--- a/src/components/Dashboard/_main.scss
+++ b/src/components/Dashboard/_main.scss
@@ -10,8 +10,11 @@
 
 .dashboard {
   display: flex;
-  //flex-direction: column;
+  flex-direction: column;
   background-color: $lighter;
   width: 100%;
   height: 100vh;
+  &__content {
+    height: 100%;
+  }
 }
