--- a/src/styles/abstracts/_normalize.scss
+++ b/src/styles/abstracts/_normalize.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap");
-@import "./variables";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+@import './variables';
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -13,8 +13,14 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  scroll-behavior: smooth;
 }
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
 /* Sections
     ========================================================================== */
 
@@ -25,6 +31,7 @@ html {
 body {
   margin: 0;
   font-family: $font-family;
+  //background-color: #0af;
 }
 
 /**
@@ -35,6 +42,11 @@ main {
   display: block;
 }
 
+section {
+  padding: 1em 0.5em;
+  line-height: 1.5;
+  min-height: 100vh;
+}
 /**
   * Correct the font size and margin on `h1` elements within `section` and
   * `article` contexts in Chrome, Firefox, and Safari.
@@ -45,6 +57,13 @@ h1 {
   margin: 0.67em 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-transform: capitalize;
+}
 /* Grouping content
     ========================================================================== */
 
@@ -199,9 +218,9 @@ select {
   */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
@@ -210,9 +229,9 @@ button,
   */
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -222,9 +241,9 @@ button::-moz-focus-inner,
   */
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -273,8 +292,8 @@ textarea {
   * 2. Remove the padding in IE 10.
   */
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
 }
@@ -283,8 +302,8 @@ textarea {
   * Correct the cursor style of increment and decrement buttons in Chrome.
   */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -293,7 +312,7 @@ textarea {
   * 2. Correct the outline style in Safari.
   */
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -302,7 +321,7 @@ textarea {
   * Remove the inner padding in Chrome and Safari on macOS.
   */
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
