--- a/src/pages/Post/_style.scss
+++ b/src/pages/Post/_style.scss
@@ -31,7 +31,7 @@
     figure > img {
       width: 100%;
     }
-    figure ~ p {
+    p {
       line-height: 1.7;
       font-size: 1.2em;
       word-break: break-word;
