--- a/src/pages/Home/LatestPost/_style.scss
+++ b/src/pages/Home/LatestPost/_style.scss
@@ -15,9 +15,9 @@
       font-weight: 500;
 
       a {
-        color: black;
+        color: $primary;
         &:hover {
-          color: $primary;
+          opacity: 0.7;
         }
       }
     }
