--- a/src/pages/Post/_style.scss
+++ b/src/pages/Post/_style.scss
@@ -1,4 +1,5 @@
-@import './Comment/style';
+@import '../../styles/abstracts/mixins';
+@import '../../styles/abstracts/variables';
 
 .post {
   display: flex;
@@ -8,6 +9,7 @@
   }
 
   &__info {
+    margin: 0;
     color: #444;
   }
   &__title {
@@ -61,7 +63,7 @@
   }
   &__line {
     display: block;
-    padding: 1em 0;
+    padding: 0.5em 0;
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
