--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -9,22 +9,24 @@
     margin-bottom: 8px;
   }
   &__label {
+    display: flex;
+    align-items: center;
     min-width: 100px;
     padding: 0.5em 0;
     margin-right: 0.5em;
-    text-align: center;
   }
   &__input {
     display: block;
     width: 100%;
     border: none;
+    border: 1px solid #ddd;
     border-radius: 4px;
     padding: 12px 4px;
     margin-top: 0.5em;
     font-size: 1rem;
     outline: none;
     &:focus {
-      border: 1px solid $primary;
+      border-color: $primary;
     }
     &::placeholder {
       padding-left: 2px;
@@ -33,6 +35,7 @@
   &__textarea {
     border: none;
     outline: none;
+    border: 1px solid #ddd;
     border-radius: 4px;
     padding: 12px 4px;
     margin-top: 0.5em;
@@ -40,7 +43,7 @@
     line-height: 2;
     width: 100%;
     &:focus {
-      border: 1px solid $primary;
+      border-color: $primary;
     }
     &::placeholder {
       padding-left: 2px;
