--- a/src/components/Dashboard/PostTable/_style.scss
+++ b/src/components/Dashboard/PostTable/_style.scss
@@ -2,7 +2,7 @@
 .posts {
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding-top: 150px;
   background-color: #fff;
