add scroll button

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -7,7 +7,7 @@
 @import '../components/jumbotron/style';
 @import '../components/Footer/style';
 @import '../components/Navbar/style';
-
+@import '../components/Layout/style';
 @import '../components/Login/style';
 @import '../components/Button/style';
 @import '../components/Modal/style';
